--- a/themes/hugo-future-imperfect-slim/layouts/_default/stats.html
+++ b/themes/hugo-future-imperfect-slim/layouts/_default/stats.html
@@ -10,7 +10,7 @@
   {{ else if .Site.Params.hideEmptyStats }}
   {{ else }}
     <ul class="categories">
-      <li>Category</li>
+      <li>Categories</li>
     </ul>
   {{ end }}
   {{ if .Params.tags }}
@@ -24,7 +24,7 @@
   {{ else if .Site.Params.hideEmptyStats }}
   {{ else }}
     <ul class="tags">
-      <li>Shop</li>
+      <li>Tags</li>
     </ul>
   {{ end }}
 </div>
